fix: invalid CSS properties (overflow and !important)

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -758,7 +758,6 @@ window.singularity-blur .dock-window:backdrop .dock-box,
 }
 .switcher-thumbnail-box {
     border-radius: 8px;
-    overflow: hidden;
     background-color: @card_bg;
 }
 .switcher-thumbnail-fallback {
